Modifs Bilal (abstract et notations) et style ECML (juste les fichiers)

--- a/piot2012cascading/ECML13_cascading.tex
+++ b/piot2012cascading/ECML13_cascading.tex
@@ -37,8 +37,12 @@
 \setcounter{tocdepth}{3}
 \tableofcontents
 \vspace*{1cm}
-\section{Abstract}
-\label{sec-1}
+\begin{abstract}
+  This paper considers the Inverse Reinforcement Learning (IRL) problem which consists in inferring a reward function for which a demonstrated expert policy is optimal.
+We propose to break the IRL problem down into two Supervised Learning (SL) steps: this is the cascaded approach. The first step consists in a classification and the second step in a regression.
+This cascaded approach is justified by an analysis which shows that the demonstrated expert policy is near-optimal for the reward function outputted by the regression step. Besides, we provide an algorithm which is an instantiation of the cascaded approach. This algorithm does not need to solve repeatedly the Reinforcement Learning (RL) problem and use only sampled transitions as an input.
+Finally, up to the use some heuristics, the algorithm may work with only transitions sampled according to the demonstrated expert policy. This is illustrated on a car driving simulator, on a Gridworld and on an inverted pendulum.
+  \end{abstract}
 \section{Introduction}
 \label{sec-2}
 
@@ -60,13 +64,18 @@
 %% \item insister sur l'optimalité de l'expert comme hypothèse. Un expert sous optimal, c'est un autre champ de littérature, éventuellement donner deux trois refs.
 %% \end{itemize}
 %% \end{itemize}
-We frame the sequential decision problem in a \emph{Markov Decision Process} (MDP), that is a tuple $\{S,A,P,R,\gamma\}$. At each time step $t$, the agent uses the information encoded in the state $s_t\in S$ it is in to choose an action $a_t \in A$ according to a (deterministic\footnote{We restrict ourselves here to deterministic policies, but this dos not induce any loss of generality.}) \emph{policy} $\pi: S \rightarrow A$. The agent then transits to a new state $s_{t+1}\in S$ according to the markovian transition probabilities $P(s_{t+1}|s_t,a_t)$. The reward function $R : S\times A \rightarrow \mathbb{R}$ is a local measure of the quality of the control. The global quality of the control induced by a policy $\pi$, with respect to a reward $R$ is assessed by the value function $V^\pi_R \in \mathbb{R}^{|S|}$ which associates each state with the discounted cumulative reward for following policy $\pi$ from this state : $V^\pi_R(s) = \E[\sum_{t\geq 0}\gamma^tR(s_t)|s_0 = s]$. Therefore, an optimal policy $\pi^*_R$ is a policy whose value function (the optimal value function $V^*_R$) is greater than that of any other policy, for all states : $\forall \pi, \forall s \in S, V^*_R(s) \geq V^\pi_R(s)$. The stationary distribution induced by a policy $\pi$ is written $\rho_\pi,\textrm{ s.t. }\rho_\pi^TP^\pi = \rho_\pi$.
+First, we introduce some general notations.
+Let $E$ and $F$ be two non-empty sets, $E^F$ is the set of functions from $F$ to $E$.
+Let $X$ be a non-empty finite set. We note $\Delta_X$ the set of distributions over $X$ and $Card(X)$ its cardinal. 
+Let $\alpha\in\mathbb{R}^X$ and $\beta\in\mathbb{R}^X$: $\alpha\leq\beta$ is a componentwise inequality.
 
-The Bellman evaluation operator $T^\pi_R: \mathbb{R}^{|S|} \rightarrow  \mathbb{R}^{|S|}$ is defined by $T^\pi_RV = R + \gamma P^piV$ using the straightforward matricial notation $P\pi = (p(s'|s,\pi(s)))_{s,s' \in S}$. The Bellman optimality operator follows naturally : $T^*_RV = \max_\pi T^\pi_RV$. Both these operator are contractions. The fixed point of the Bellman evaluation operator $T^\pi_R$ is the value function of $\pi$ with respect to reward R $V^\pi_R$ ; the fixed point of the Bellman optimality operator $T^*_R$ is the optimal value function $V_R^*$ with respect to reward $R$. Optimal value function and optimal policy are also linked via the quality function $Q^\pi_R$, a state-action value function that adds a degree of freedom on the choice of the first action, formally defined by $Q^\pi_R(s,a) = T^a_Rv^\pi_R(s)$, with $a$ the policy that always returns action $a$ : the optimal policy follows a greedy mechanism with respect to its optimal quality function $\pi^*_R(s) = \argmax_aQ^*_R(s,a)$.
+We frame the sequential decision problem in a finite \emph{Markov Decision Process} (MDP), that is a tuple $\{S,A,P,R,\gamma\}$. $S=\{s_i\}_{1\leq i\leq Card(S)}$ is a finite state space, $A=\{a_i\}_{1\leq i\leq Card(K)}$ is a finite action space, $R\in\mathbb{R}^{S\times A}$ is a reward-function, $\gamma\in ]0,1[$ is a discount factor and $P\in \Delta_{S}^{S\times A}$ is the dynamic of the MDP. Thus for each $(s,a)\in S\times A$, $P(.|s,a)$ is a distribution over $S$ and $P(s'|s,a)=p(s,a,s')$ is the probability to reach $s'$ by choosing the action $a$ in the state $s$. At each time step $t$, the agent uses the information encoded in the state $s_t\in S$ in order to choose an action $a_t \in A$ according to a (deterministic\footnote{We restrict ourselves here to deterministic policies, but this dos not induce any loss of generality.}) \emph{policy} $\pi\in A^S$. The agent then transits to a new state $s_{t+1}\in S$ according to the markovian transition probabilities $P(s_{t+1}|s_t,a_t)$. The reward function $R$ is a local measure of the quality of the control. The global quality of the control induced by a policy $\pi$, with respect to a reward $R$ is assessed by the value function $V^\pi_R \in \mathbb{R}^{S}$ which associates each state with the discounted cumulative reward for following policy $\pi$ from this state: $V^\pi_R(s) = \E[\sum_{t\geq 0}\gamma^tR(s_t)|s_0 = s]$. Therefore, an optimal policy $\pi^*_R$ is a policy whose value function (the optimal value function $V^*_R$) is greater than that of any other policy, for all states : $\forall \pi, \forall s \in S, V^*_R(s) \geq V^\pi_R(s)$. The stationary distribution induced by a policy $\pi$ is written $\rho_\pi,\textrm{ s.t. }\rho_\pi^TP^\pi = \rho_\pi$.
 
-When the state space is too large to allow matricial representation or when the transition probability or even the reward function are unknown except through observations gained by interacting with the system, \emph{Reinforcement Learning} (RL) or approximate dynamic programming may be used to retireve the optimal control policy. We call this the direct problem.
+The Bellman evaluation operator $T^\pi_R: \mathbb{R}^{S} \rightarrow  \mathbb{R}^{S}$ is defined by $T^{\pi_R}V = R + \gamma P_\pi V$ using the straightforward matricial notation $P_\pi = (p(s'|s,\pi(s)))_{s,s' \in S}$. The Bellman optimality operator follows naturally : $T^*_RV = \max_\pi T^\pi_RV$. Both operators are contractions. The fixed point of the Bellman evaluation operator $T^\pi_R$ is the value function of $\pi$ with respect to reward R: $V^\pi_R$; the fixed point of the Bellman optimality operator $T^*_R$ is the optimal value function $V_R^*$ with respect to reward $R$. Optimal value function and optimal policy are also linked via the quality function $Q^\pi_R\in\mathbb{R}^{S\times A}$, a state-action value function that adds a degree of freedom on the choice of the first action, formally defined by $Q^\pi_R(s,a) = T^a_RV^\pi_R(s)$, with $a$ the policy that always returns action $a$ ($T^aV = R + \gamma P_a V$ with $P_a = (p(s'|s,a))_{s,s' \in S}$). The optimal policy follows a greedy mechanism with respect to its optimal quality function $\pi^*_R(s)\subset\argmax_aQ^*_R(s,a)$.
 
-In this work, we wish to tackle the inverse problem. We observe an expert's deterministic\footnotemark[\value{footnote}] policy $\pi^E$, assuming that there exist some unknown reward $R^E$ for which the expert is optimal. The non optimality of the expert is an interesting setting that has been discussed for example FIXME:NONOPTIMALITY but that we are not addressing here. We do not try to find this unknown reward $R^E$ but rather a non trivial reward $R$ for which the expert is also optimal. The trivial reward $0$ is a solution to this ill-posed problem (no reward means that every behavior is optimal). Because of its ill-posed nature, this expression of \emph{Inverse Reinforcement Learning} (IRL) still has to find a satisfactory solution although lots of progress have been made, see section \ref{sec:related}. 
+When the state space is too large to allow matricial representation or when the transition probability or even the reward function are unknown except through observations gained by interacting with the system, \emph{Reinforcement Learning} (RL) or approximate dynamic programming may be used to retrieve the optimal control policy. We call this the direct problem.
+
+In this work, we wish to tackle the inverse problem. We observe an expert's deterministic\footnotemark[\value{footnote}] policy $\pi^E$, assuming that there exist some unknown reward $R^E$ for which the expert is optimal. The non optimality of the expert is an interesting setting that has been discussed for example FIXME:NONOPTIMALITY but that we are not addressing here. We do not try to find this unknown reward $R^E$ but rather a non trivial reward $R$ for which the expert is also optimal. The trivial reward $0$ is a solution to this ill-posed problem (no reward means that every behavior is optimal). Because of its ill-posed nature, this expression of \emph{Inverse Reinforcement Learning} (IRL) still has to find a satisfactory solution although lots of progress have been made, see section \ref{sec:related}.
 \section{The cascading algorithm}
 \label{sec:algo}
 %% \begin{itemize}
@@ -285,7 +294,7 @@ PIRL is given the transition probabilities (that is, a $|S|\times |S|\times |A|$
 \item Que faire en cas d'expert sous optimal ?
 \item ouverture sur l'active learning en reprenant les notions de pessimisme ou d'optimisme en présence d'incertitude
 \end{itemize}
-   
+
 \section{Annexes}
 \label{sec-9}
 \subsection{GridWorld}
