WIP sur le papier ECML

--- a/piot2012cascading/Biblio.bib
+++ b/piot2012cascading/Biblio.bib
@@ -7,6 +7,25 @@
 
 %% Saved with string encoding Unicode (UTF-8)
 
+
+@book{rasmussen2006gaussian,
+  title={Gaussian processes for machine learning},
+  author={Rasmussen, C.E. and Williams, C.K.I.},
+  volume={1},
+  year={2006},
+  publisher={MIT press Cambridge, MA}
+}
+
+
+@article{guermeur2011generic,
+  title={A generic model of multi-class support vector machine},
+  author={Guermeur, Y.},
+  journal={International Journal of Intelligent Information and Database Systems},
+  year={2011}
+}
+
+
+
 @article{melo2010learning,
   title={Learning from demonstration using MDP induced metrics},
   author={Melo, F. and Lopes, M.},
