--- a/piot2012cascading/Biblio.bib
+++ b/piot2012cascading/Biblio.bib
@@ -4,10 +4,14 @@
 
 %% Created for Edouard KLEIN at 2011-11-02 11:38:13 +0100
 
+@book{vapnik1996nature,
+  title={The nature of statistical learning theory},
+  author={Vapnik, V.},
+  year={1996},
+  publisher={Springer-Verlag, New York}
+}
 
 %% Saved with string encoding Unicode (UTF-8)
-
-
 @book{rasmussen2006gaussian,
   title={Gaussian processes for machine learning},
   author={Rasmussen, C.E. and Williams, C.K.I.},
@@ -24,6 +28,14 @@
   year={2011}
 }
 
+@inproceedings{melo2010analysis,
+  title={Analysis of inverse reinforcement learning with perturbed demonstrations},
+  author={Melo, F.S. and Lopes, M. and Ferreira, R.},
+  booktitle={Proceedings of the 2010 conference on ECAI 2010: 19th European Conference on Artificial Intelligence},
+  pages={349--354},
+  year={2010},
+  organization={IOS Press}
+}
 
 
 @article{melo2010learning,
@@ -5389,6 +5401,18 @@ month = {september},
 series = {Lecture Notes in Computer Science (LNCS)},
 	Title = {{Batch, Off-policy and Model-Free Apprenticeship Learning}},
 	Year = {2011}}
+
+
+	@conference{klein2012scirl,
+author = {Edouard Klein and Bilal PIOT and Matthieu Geist and Olivier Pietquin},
+title = {{Structured Classification for Inverse Reinforcement Learning}},
+year = {2012},
+booktitle = {{European Workshop on Reinforcement Learning (EWRL 2012)}},
+month = {June},
+address = {Edinburgh (UK)},
+url = {http://ewrl.files.wordpress.com/2011/12/ewrl2012_submission_30.pdf},
+abstract = {TBD}
+}
 
 @article{tipping2001sparse,
 	Author = {Tipping, M.E.},
